--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mobile",
   "version": "1.0.0",
+  "author": "Thales Loreto",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,7 +11,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-font": "~10.1.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,7 +26,9 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
-    "typescript": "~4.3.5"
+    "prettier": "^2.6.2",
+    "typescript": "~4.3.5",
+    "typescript-language-server": "^0.9.7"
   },
   "private": true
 }
